--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "babel-preset-react-app": "^10.0.1",
+    "firebase": "^10.7.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-lottie": "^1.2.3",
@@ -23,6 +25,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "swiper": "^11.0.5",
+    "use-debounce": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
