--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-lottie": "^1.2.3",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.0.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
